@@ -52,6 +52,8 @@ Ctrlproxy 3.0.8 UNRELEASED
 
 	* Fix client-limit for auto-away. (Alex Stansfield)
 
+    * Send channel limits in mode. (#200)
+
   INTERNALS
 
     * Use generic storage for MODEs.
